--- a/favoritmovie/src/main/AndroidManifest.xml
+++ b/favoritmovie/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.acer.example.favoritmovie">
 
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.android.providers.tv.permission.READ_EPG_DATA" />
     <uses-permission android:name="com.acer.example.katalogfilmsub2.READ_DATABASE" />
     <uses-permission android:name="com.acer.example.katalogfilmsub2.WRITE_DATABASE" />
@@ -20,6 +22,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".DetailActivity" />
+        <activity android:name="com.acer.example.katalogfilmsub2.DetailTvShowActivity" />
     </application>
 
 </manifest>
